Closed
Bug 35813
Opened 25 years ago
Closed 25 years ago
case sensitivity of CSS namespaces code [SELECT]
Categories
(Core :: CSS Parsing and Computation, defect, P2)
Core
CSS Parsing and Computation
Tracking
()
VERIFIED
FIXED
M18
People
(Reporter: dbaron, Assigned: dbaron)
Details
(Keywords: css3, Whiteboard: [fix in hand][nsbeta3+])
Attachments
(4 files)
According to http://www.w3.org/TR/REC-CSS2/syndata.html#q4 , nothing under the
control of CSS is case-sensitive. Therefore, namespace prefixes in CSS should
not be case sensitive.
I have not tested this, but the code makes it look like we do this wrong.
I should probably bring this up on www-style too... people might want namespaces
to be case-senstitive, although it's unusual for CSS.
See also bug 12450 (same area of the code).
| Assignee | ||
Comment 1•25 years ago
|
||
Yes, this is definitely a bug. Attaching one simple testcase. I think I can
probably fix it, so I'm holding on to it.
| Assignee | ||
Comment 2•25 years ago
|
||
| Assignee | ||
Comment 3•25 years ago
|
||
| Assignee | ||
Comment 4•25 years ago
|
||
Accepting, M18. I want to fix this after beta2 goes out. (I don't think it's
worth introducing risk at this point.) (Unless, pierre, you want to fix this
sooner.)
Status: NEW → ASSIGNED
Target Milestone: --- → M18
| Assignee | ||
Updated•25 years ago
|
Target Milestone: M18 → M19
Comment 5•25 years ago
|
||
As per meeting with ChrisD yesterday, taking QA.
Nominating for nsbeta3. This is a standards compliance issue.
Keywords: correctness,
nsbeta3
QA Contact: chrisd → py8ieh=bugzilla
Updated•25 years ago
|
Summary: case sensitivity of CSS namespaces code → case sensitivity of CSS namespaces code [SELECT]
| Assignee | ||
Updated•25 years ago
|
Target Milestone: M19 → M18
| Assignee | ||
Updated•25 years ago
|
Priority: P3 → P2
| Assignee | ||
Updated•25 years ago
|
Whiteboard: [fix in hand]
| Assignee | ||
Comment 6•25 years ago
|
||
Marking nsbeta3+ per ekrock's email.
Whiteboard: [fix in hand] → [fix in hand][nsbeta3+]
| Assignee | ||
Comment 7•25 years ago
|
||
Fix checked in 2000-09-07 19:05.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 8•25 years ago
|
||
Testcase is invalid, will attach new testcase.
Comment 9•25 years ago
|
||
Comment 10•25 years ago
|
||
Well, I get a crash from the new stylesheet too. Oh well. New testcase coming
up for completeness (uses new stylesheet).
Note - these crashes are unrelated to this bug, since I am using a build that
was made after the fix went in.
Comment 11•25 years ago
|
||
Comment 12•25 years ago
|
||
VERIFIED FIXED on Windows 2000 Commercial Build 2000091308 and Linux Commercial
Build 2000091312 using second testcase.
Status: RESOLVED → VERIFIED
| Assignee | ||
Comment 13•18 years ago
|
||
This fix is being reverted in bug 416106.
You need to log in
before you can comment on or make changes to this bug.
Description
•