Clean up reporting of CSS parser errors:  Use |nsAReadableString|s and an additional macro to allow all the error reporting to be done by macros.  Also clean up a few comments.  Not part of the default build (you must define CSS_REPORT_PARSE_ERRORS).

Make namespace prefixes case insensitive within CSS by normalizing to lower-case.  b=35813

r=attinasi